--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="root"></div>
     <div id="modal-root"></div>
-    <div id="global-error-root"></div>
+    <div id="global-message-root"></div>
   </body>
 </html>
